Implementação do CRUD da US14, falta algumas correções
